--- a/Android/lab09/lab09/app/src/main/AndroidManifest.xml
+++ b/Android/lab09/lab09/app/src/main/AndroidManifest.xml
@@ -9,6 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.APP_sqlite">
+        <provider
+            android:name=".MyContentProvider"
+            android:authorities="cn.lllllan.android.app_sqlite.provider"
+            android:enabled="true"
+            android:exported="true"></provider>
+
         <activity
             android:name=".NewContactActivity"
             android:exported="true" />
