--- a/Android/lab10/call/app/src/main/AndroidManifest.xml
+++ b/Android/lab10/call/app/src/main/AndroidManifest.xml
@@ -1,10 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="cn.edu.hznu.app_lab10">
+    package="cn.lllllan.android.app_call">
 
-    <queries>
-        <package android:name="cn.lllllan.android.app_lab09" />
-    </queries>
+    <uses-permission android:name="android.permission.CALL_PHONE"/>
 
     <application
         android:allowBackup="true"
@@ -12,16 +10,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.App_lab10">
-        <activity
-            android:name=".ContactsList"
-            android:exported="true" />
-        <activity
-            android:name=".QueryContactActivity"
-            android:exported="true" />
-        <activity
-            android:name=".AddContactActivity"
-            android:exported="true" />
+        android:theme="@style/Theme.App_call">
+
         <activity
             android:name=".MainActivity"
             android:exported="true">
